fix: Fix footer alignment

--- a/src/style.css
+++ b/src/style.css
@@ -116,5 +116,5 @@ h2 {
 /* Footer */
 footer {
     text-align: center;
-    grid-column: 1/2;
+    grid-column: 1/3;
 }
